2014-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c,
	* src/ds390/main.c,
	* src/ds390/gen.c: renamed _ap to acc1, fixed bug 1896
	* support/regression/tests/gcc-torture-execute-loop-5.c: enabled for ds390
	* sdas/asxxsrc/aslex.c (nxtline): fixed bug 2166 and 2206
	* src/SDCClospre.hpp,
	* src/SDCCralloc.hpp: fixed MSVC warnings

2014-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: applied patch 62
	* sdas/linksrc/lkarea.c (lnksect): fixed bug 1805
	* sdas/linksrc/lkmain.c (Areas51): use only for mcs51
	* src/hc08/main.c: mark XINIT as (CODE)

2013-12-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/ralloc2.cc,
	  src/stm8/gen.c,
	  src/stm8/ralloc2.cc:
	  Remove some GETHBIT leftovers.

2013-12-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genGetHbit): removed
	* src/mcs51/main.c (hasExtBitOp): removed GETHBIT
	* src/SDCCast.c (optimizeGetByte, optimizeGetWord): do not use GETYBTE or
	  GETWORD for byte or word sources
	  (createFunction): allow xstack==NULL
	* src/SDCCmem.c (redoStackOffsets): allow xstack==NULL
	* src/SDCCerr.c (W_CONST_TOO_LARGE): fixed format bug
	* src/SDCCerr.h: cosmetics
	* src/SDCCsymt.c (mergeSpec, checkSClass): fixed bug 2068, loss of register
	  storage class

2013-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/is*.c
	  Revert and redo commit #8912.

2013-12-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (glue): added .optsdcc --all-callee-saves, fixed bug 2090
	* src/SDCCmain.c (preProcess): added -D__SDCC_ALL_CALLEE_SAVES
	* src/SDCCglobl.h: removed xa51 MODEL_PAGE0
	* doc/sdccman.lyx: documented predefined macro

2013-12-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: copy either sjlj or seh support dll

2013-12-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/abs.c,         device/lib/acosf.c,         device/lib/asincosf.c,